src/objects/Loan_Product_Accounting_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Business_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Event</label>
        <referenceTo>Business_Event__c</referenceTo>
        <relationshipLabel>Loan Product Accounting Setup</relationshipLabel>
        <relationshipName>Loan_Product_Accounting_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Rule</label>
        <referenceTo>Accounting_Rule_Header__c</referenceTo>
        <relationshipLabel>Loan Product Accounting Setup (Default Rule)</relationshipLabel>
        <relationshipName>Loan_Product_Accounting_Setup1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Product__c</fullName>
        <label>Loan Product</label>
        <referenceTo>Loan_Product__c</referenceTo>
        <relationshipLabel>Loan Product Accounting Setup</relationshipLabel>
        <relationshipName>Loan_Product_Accounting_Setup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Use_Default_Setup__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Default Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Defined_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Defined Rule</label>
        <referenceTo>Accounting_Rule_Header__c</referenceTo>
        <relationshipLabel>Loan Product Accounting Setup</relationshipLabel>
        <relationshipName>Loan_Product_Accounting_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Loan Product Accounting Setup</label>
    <nameField>
        <displayFormat>LPASID-{00000}</displayFormat>
        <label>Loan Product Accounting Setup ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Product Accounting Setup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DefaultOrUserDefinedValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (Use_Default_Setup__c, NOT(ISBLANK(User_Defined_Rule__c)))</errorConditionFormula>
        <errorMessage>Please uncheck &apos;Default Setup&apos; if you wish to use a user defined rule.</errorMessage>
    </validationRules>
</CustomObject>